# task-manager-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.md
src/task_manager/application/: complete_task.py  create_task.py  delete_task.py  get_task.py  list_tasks.py
src/task_manager/application/ports/: task_repository.py
src/task_manager/cli/: app.py  complete.py  create.py  delete.py  get.py  list_tasks.py
src/task_manager/domain/: enums.py  task.py
src/task_manager/infrastructure/persistence/: in_memory_task_repository.py  sqlite_task_repository.py  sqlite_task_repositoy.py
tests/: conftest.py
tests/Integration/: conftest.py  test_sqlite_use_cases.py
tests/application/: test_task_use_cases.py
tests/domain/: test_task.py
tests/infrastructure/: test_sqlite_repository.py
