[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "task-manager-cli"
version = "0.1.0"
description = "Professional Task Manager CLI"
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]